--- a/P07A-Multimodulo/multimodulos/matriculacion/matriculacion-bo/pom.xml
+++ b/P07A-Multimodulo/multimodulos/matriculacion/matriculacion-bo/pom.xml
@@ -27,5 +27,16 @@
             <artifactId>matriculacion-comun</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
