--- a/P07A-Multimodulo/multimodulos/matriculacion/matriculacion-comun/pom.xml
+++ b/P07A-Multimodulo/multimodulos/matriculacion/matriculacion-comun/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>matriculacion-comun</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
